<?xml version="1.0" encoding="utf-8"?>

<!-- author: Christiane Prutsch, Markus Deutsch, Clemens Kaar -->
<!-- 17.12.2013 -->

<resources>
    <string name="app_name">Reanimation Analyzer</string>
    <string name="lblResults">Ergebnisse</string>
    <string name="lblReanimation">Reanimation</string>
    <string name="lblDuration">Dauer</string>
    <string name="lblStartTraining">Training starten</string>
    <string name="lblSlideToStop">Zum Stoppen wischen</string>
    <string name="lblTooFast">zu schnell</string>
    <string name="lblTooSlow">zu langsam</string>
    <string name="lblFeedback">Feedback geben</string>
    <string name="lblFirstAidInfo">Erste Hilfe Kurse</string>
    <string name="lblFirstAidApp">Erste Hilfe App</string>
    <string name="durationMinuteSingular">Eine Minute</string>
    <string name="durationMinutePlural">%s Minuten</string>
    <string name="durationSecondSingular">eine Sekunde</string>
    <string name="durationSecondPlural">%s Sekunden</string>
    <string name="lblResetDatabase">Datenbank zurücksetzen</string>
    <string name="emptyResultList">Es gibt noch keine Trainingsergebnisse</string>
    <string name="infoBackDisabled">Bitte Wischen um das Training zu beenden.</string>
    <string name="introductionHeader">\nFrequenz:</string>
    <string name="introduction">%s Kompressionen/Minute</string>
    <string name="title_activity_info">Info</string>
    <string name="info">Diese App dient zum Training der Herzdruckmassage auf Reanimationspuppen. Zur Analyse der Trainingsaktivität muss das Smart Phone auf dem Brustkorb der Puppe platziert werden. Sobald mit den Kompressionen begonnen wird, erfolgt eine Messung, wie stark die Frequenz von der optimalen Wiederbelebungsfrequenz abweicht.</string>
</resources>
