<!-- author: Christiane Prutsch, Markus Deutsch, Clemens Kaar -->
<!-- 17.12.2013 -->

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".InfoActivity" 
    >

<LinearLayout 
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:id="@+id/intro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:text="@string/info"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <Button
        android:id="@+id/feedback"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/lblFeedback" />

    <Button
        android:id="@+id/firstaidInfo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/lblFirstAidInfo" />
    
    <Button
        android:id="@+id/firstaidApp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/lblFirstAidApp" />

</LinearLayout>

</ScrollView>