<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/black"
    android:baselineAligned="false"
    android:orientation="horizontal"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:keepScreenOn="true"
    tools:context=".MainActivity" >

   <LinearLayout
        android:layout_width="0dip"
        android:layout_height="match_parent"
        android:layout_weight="10"
        android:gravity="center"
        android:orientation="vertical" >

        <Chronometer
            android:id="@+id/chronometer"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textColor="@android:color/white"
            android:textSize="100sp" />

        
        <RelativeLayout 
            android:id="@+id/unlocker_layout"
            android:layout_width="fill_parent"
            android:layout_height="50dp">

            <TextView 
                android:background="@drawable/gradient_dark"
                android:text="@string/lblSlideToStop"
                android:layout_width="fill_parent"
            	android:layout_height="50dp"
            	android:gravity="center"
            	android:textColor="@android:color/white"/>
            
            <SeekBar
	            android:id="@+id/unlocker"
	            android:layout_width="match_parent"
	            android:layout_height="50dp" 
	            android:thumb="@drawable/thumb"
	            android:progressDrawable="@android:color/transparent"/>
            
        </RelativeLayout>

    </LinearLayout>

    <RelativeLayout
        android:id="@+id/indicator_supercontainer"
        android:layout_width="100dp"
        android:layout_marginRight="5dp"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/toofast"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:text="@string/lblTooFast"
            android:textColor="@android:color/white"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <TextView
            android:id="@+id/tooslow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:text="@string/lblTooSlow"
            android:textColor="@android:color/white"
            android:textAppearance="?android:attr/textAppearanceSmall" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/indicator_container"
        android:layout_width="40dp"
        android:layout_height="match_parent"
        android:background="@drawable/quality_gradient" >

        <ImageView
            android:id="@+id/indicator"
            android:layout_width="40dp"
            android:layout_height="4dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:src="@android:color/white" />
    </RelativeLayout>

</LinearLayout>